0.50.2 (2017-07-11)
------------------
- storing the api version internally
- doing some regex checking to ensure a valid api version is sent to the constructor
- reorganized tests to run against multiple API endpoint versions

0.50.1 (2017-03-31)
------------------
- added 'secure_only' constructor, default True, to ensure https requests
- fixed how pyramid support used 'ssl_verify'
- made url optional to api_proxy, defaulting to the graph url otherwise
- appsecret_proof upgrades for get_data too


0.50.0 (2017-03-29)
------------------
- updates to work with recent facebook api changes
- - some apis now hit different endpoints
- - some response formats have now changed; the minimum 2.3 now uses a json payload instead of urlencoded
- will now look to environment for default api version (`export FBUTILS_FB_API_VERSION=v2.8`)
- will now look to environment for debug (`export FBUTILS_DEBUG=True`)
- fixed typo/rename `fb_grap_api_version` > `fb_api_version`
- redid how urls are generated for clarity
- updated tests
- made interactive tests public
- pyramid integration namespace change -- now `fbutils.`.  this is to ensure things break and people upgrade correctly
- set a custom prefix for pyramid paster integration via `fbutils.prefix`
- now supports appsecret_proof
- the url/payload will be inspected for app_secret; if present and the appsecret_proof is required, will augment the requests as needed. this allows for paginated urls from API results to be automatically followed

"""
https://developers.facebook.com/docs/apps/changelog
	[Oauth Access Token] Format - The response format of https://www.facebook.com/v2.3/oauth/access_token returned when you exchange a code for an access_token now return valid JSON instead of being URL encoded. The new format of this response is {"access_token": {TOKEN}, "token_type":{TYPE}, "expires_in":{TIME}}. We made this update to be compliant with section 5.1 of RFC 6749.
"""


0.40.4 (2017-01-11)
------------------
- packaging fix